# mp3_converter

./: .gitignore  README.md  mp3_converter.rb  pyproject.toml  setup.py
src/mp3_converter/: __init__.py  mp3_converter.py
src/tests/: test_mp3_converter.py
src/tests/fixtures/: sample.aiff  sample.flac
