[tool.poetry]
name = "mp3-converter"
version = "0.1.0"
description = "A simple utility that converts all .flac and .aiff files in a directory to .mp3 at the highest possible bitrate, with no dependencies."
authors = ["Renier Botha <renier.botha@unity3d.com>"]
readme = "README.md"
packages = [{include = "mp3_converter", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
colorama = "^0.4.6"
pydub = "^0.25.1"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"
pytest = "^8.3.2"

[tool.poetry.scripts]
mp3_converter = "mp3_converter.mp3_converter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]